[project]
name = "tanamesa-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "carlos-dani-dev",email = "carlos.rocha@ufpi.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread (>=6.2.1,<7.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
